# abel-assistant

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURE_DEPLOYMENT.md  SECURITY_CHECKLIST.md  SECURITY_FIXES.md  build.bat  build.py  build_exe.bat  docker-compose.yml  launcher.py  nixpacks.toml  railway.toml  setup.py  start.bat
.claude/: settings.local.json
backend/: .env.example  CHANGES.md  Dockerfile  RESILIENCE.md  check_startup.py  nixpacks.toml  pyproject.toml  railway.json  test_resilience.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  chat.py  deps.py  entertainment.py  finance.py  health.py  memory.py  utilities.py  voice.py  websocket.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  health.py  memory.py  tools.py  vision.py  voice.py
backend/app/brain/: __init__.py  chat_service.py  memory_service.py  ollama_service.py
backend/app/config/: security.py  settings.py
backend/app/core/: __init__.py  celery_app.py  config.py  database.py  exceptions.py  local_config.py  logging.py  redis.py  security.py
backend/app/core/security/: auth.py  middleware.py  rate_limiter.py
backend/app/modules/: __init__.py
backend/app/modules/api_explorer/: __init__.py  api_discovery.py  dynamic_caller.py  tasks.py
backend/app/modules/productivity/: __init__.py  calendar_client.py  gmail_client.py  tasks.py
backend/app/modules/social/: __init__.py  conversation_analyzer.py  instagram_client.py  tasks.py  twitter_client.py
backend/app/schemas/requests/: auth.py  chat.py  memory.py
backend/app/schemas/responses/: auth.py  chat.py  memory.py
backend/app/senses/: __init__.py  audio.py
backend/app/services/: __init__.py  api_registry.py  feature_manager.py
backend/app/services/entertainment/: __init__.py  anime_service.py  deezer_auth.py  games_service.py  movie_service.py  music_service.py
backend/app/services/finance/: __init__.py  crypto_service.py  currency_service.py  stock_service.py
backend/app/services/gemini/: __init__.py  client.py  vision.py  voice.py
backend/app/services/google/: __init__.py  contacts_service.py  docs_service.py  drive_service.py  photos_service.py  sheets_service.py  tasks_service.py  youtube_service.py
backend/app/services/memory/: __init__.py  embeddings.py  rag.py  vector_store.py
backend/app/services/supabase/: __init__.py  auth.py  client.py
backend/app/services/tools/: __init__.py  news.py  registry.py  weather.py  web_search.py
backend/app/services/utilities/: __init__.py  news_service.py  qr_service.py  tools_service.py  translation_service.py  url_service.py  weather_service.py
backend/app/utils/: __init__.py  helpers.py  pii_redactor.py
backend/scripts/: validate_security.py
docker/: init-db.sql
frontend/: app.js  index.html  next.config.js  package.json  styles.css  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: ChatPanel.tsx
frontend/components/layout/: Sidebar.tsx  StatusBar.tsx
frontend/components/widgets/: CalendarWidget.tsx  EmailWidget.tsx  QuickActionsWidget.tsx  SocialWidget.tsx  SystemWidget.tsx  WeatherWidget.tsx  WidgetGrid.tsx
launcher-tauri/src/: app.js  index.html  styles.css
launcher-tauri/src-tauri/: Cargo.toml  tauri.conf.json
launcher-tauri/src-tauri/src/: main.rs
llm/: ABEL_Finetune_Colab.ipynb  README.md  config.yaml  download_model.py  finetune.py  inference.py  prepare_dataset.py  requirements.txt
llm/data/: train.jsonl
mobile/: .env.example  .eslintrc.js  app.json  eas.json  global.css  package.json  tailwind.config.js  tsconfig.json
mobile/android/app/: proguard-rules.pro
mobile/app/: _layout.tsx  index.tsx
mobile/app/(auth)/: _layout.tsx  login.tsx  register.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  memory.tsx  settings.tsx  vision.tsx  voice.tsx
mobile/src/contexts/: AuthContext.tsx  index.ts
scripts/: ops_sync.sh  start.bat  start.sh
(+12 files in other folders)
