[tool.poetry]
name = "abel-backend"
version = "1.0.0"
description = "A.B.E.L - Autonomous Backend Entity for Living"
authors = ["Adam-Blf"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
websockets = "^12.0"

# Database
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# Redis & Caching
redis = "^5.0.1"
aioredis = "^2.0.1"

# Vector Database (RAG)
qdrant-client = "^1.7.0"

# AI & ML
openai = "^1.10.0"
tiktoken = "^0.5.2"
numpy = "^1.26.3"

# Audio Processing
pydub = "^0.25.1"
soundfile = "^0.12.1"

# HTTP Client
httpx = "^0.26.0"
aiohttp = "^3.9.1"

# Google APIs
google-auth = "^2.27.0"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.116.0"

# Social Media
tweepy = "^4.14.0"
instagrapi = "^2.0.0"

# Task Queue
celery = {extras = ["redis"], version = "^5.3.6"}

# Configuration
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Logging & Monitoring
loguru = "^0.7.2"
rich = "^13.7.0"

# Utilities
python-dateutil = "^2.8.2"
pytz = "^2024.1"
tenacity = "^8.2.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
